Move color code to separate library for reusability.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_subdirectory(../ArduinoDrivers ArduinoDrivers)
+add_subdirectory(../colors colors)
 add_subdirectory(../helpers helpers)
 
 
@@ -25,5 +26,6 @@ add_executable(testDollHouseStatemachine
 
 target_link_libraries(testDollHouseStatemachine
     PRIVATE arduinoDrivers
+    PRIVATE customColors
     PRIVATE helpers
 )
