--- a/colors/CMakeLists.txt
+++ b/colors/CMakeLists.txt
@@ -1,10 +1,12 @@
 
 add_library(customColors
     colorCustom.hpp
+    colorRgbw.cpp
+    colorRgbw.hpp
     sevenSegmentRgb.cpp
     sevenSegmentRgb.hpp
 )
 
 target_include_directories(customColors
-    INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/..
+    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..
 )
