Add CustomColorFixed - which uses 4bytes less RAM per instance.

--- a/colors/CMakeLists.txt
+++ b/colors/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_library(customColors
     colorCustom.hpp
+    colorCustomFixed.hpp
     colorRgbw.cpp
     colorRgbw.hpp
     sevenSegmentRgb.cpp
