Add draft for implicit indexing - to save on RAM.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -25,3 +25,11 @@ add_executable(testColorsCustom
 target_link_libraries(testColorsCustom
     PRIVATE customColors
 )
+
+
+add_executable(testImplicitIndexing
+    testImplicitIndexing.cpp
+)
+
+# target_link_libraries(testImplicitIndexing
+# )
